tested appDomain security